[package]
name = "unreql_deadpool"
description = "Deadpool for UnReQL"
version = "0.2.0"
edition = "2021"
authors = ["Vetti <vetti.ch@mail.ru>"]
license = "MIT"
documentation = "https://docs.rs/unreql_deadpool"
repository = "https://github.com/vettich/un-rethinkdb-rs.git"
keywords = ["async", "rethinkdb", "reql", "unreql", "deadpool"]
categories = ["database"]
readme = "README.md"

[dependencies]
unreql = { version = "0.2.0", path = "../reql" }
deadpool = "0.12"
async-trait = "0.1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
