[package]
name = "unreql_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
unreql = { path = "../reql" }
unreql_deadpool = { path = "../deadpool" }

deadpool = "0.10.0"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.21"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

[[example]]
name = "changes"
path = "0-unreql/changes.rs"

[[example]]
name = "merge"
path = "0-unreql/merge.rs"

[[example]]
name = "deadpool"
path = "1-deadpool/deadpool.rs"

