[package]
name = "unreql_macros"
description = "Macros for unreql"
version = "0.1.1"
edition = "2021"
authors = ["Vetti <vetti.ch@mail.ru>"]
license = "MIT"
keywords = []
repository = "https://github.com/vettich/un-rethinkdb-rs.git"

[dependencies]
quote = "1.0.35"
syn = { version = "1.0.109", default-features = false, features = ["parsing", "proc-macro", "derive", "printing"] }
proc-macro2 = "1.0.75"
convert_case = "0.6.0"

[lib]
proc-macro = true
