[package]
name = "unreql"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unreql_macros = { version = "0.1.0", path = "../macros" }

futures = "0.3.21"
scram = "0.6.0"
time = { version = "0.3.9", features = ["macros", "formatting", "parsing"] }

tracing = "0.1.40"

serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "2.1.0"
dashmap = "5.3.4"

ql2 = "2.1.1"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.15"
