[package]
name = "unreql"
description = "Well documented and easy to use RethinkDB Rust Driver"
version = "0.1.5"
edition = "2021"
authors = ["Vetti <vetti.ch@mail.ru>"]
license = "MIT"
documentation = "https://docs.rs/unreql"
repository = "https://github.com/vettich/un-rethinkdb-rs.git"
keywords = ["async", "database", "rethinkdb", "reql", "driver"]
categories = ["database"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unreql_macros = { version = "0.1.1", path = "../macros" }

futures = "0.3.21"
async-net = "1.6.1"
async-stream = "0.3.3"
scram = "0.6.0"
time = { version = "0.3.9", features = ["macros", "formatting", "parsing"] }

tracing = "0.1.40"

serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "2.1.0"
dashmap = "5.3.4"
uuid = { version = "1.8.0", features = ["serde"] }

ql2 = "2.1.1"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.15"
