[package]
name = "unreql"
description = "Well documented and easy to use RethinkDB Rust Driver"
version = "0.1.7"
edition = "2021"
authors = ["Vetti <vetti.ch@mail.ru>"]
license = "MIT"
documentation = "https://docs.rs/unreql"
repository = "https://github.com/vettich/un-rethinkdb-rs.git"
keywords = ["async", "database", "rethinkdb", "reql", "driver"]
categories = ["database"]
readme = "README.md"

[dependencies]
unreql_macros = { path = "../macros" }

futures = "0.3"
async-net = "1.6"
async-stream = "0.3"
async-trait = "0.1"
scram = "0.6"
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }

tracing = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.1"
dashmap = "5.3"
uuid = { version = "1.8", features = ["serde"] }

ql2 = "2.1"

[dev-dependencies]
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
